# shopping-calculator

./: .gitignore  app.db  config.py  microblog.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: base.html  index.html  login.html
flaskr/: __init__.py  auth.py  blog.py  db.py
lambda-functions/: build-lambdas.sh  ocr-lambda.py
migrations/versions/: 44c7942e80e8_posts_table.py  72d886e48440_users_table.py
terraform/environments/production/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfvars  variables.tf
terraform/modules/core-platform/: main.tf  outputs.tf  variables.tf
terraform/modules/flask-web-server/: main.tf  user-data.sh  variables.tf
terraform/modules/lambda-apigw/: apigw.tf  lambda.tf  outputs.tf  variables.tf
ui/: Dockerfile
ui/app/: routes.py
ui/app/templates/: index.html
